ARROW-15718: [C++] Increase thread limit to work around thread issues

In #12339 we added one, which enabled joining one table to one dataset using `use_threads=false`. However, I found that joining two datasets hit the thread limit.

There are plans to find [a long-term fix](https://issues.apache.org/jira/browse/ARROW-16072) that can run these operations synchronously with fewer threads, but that won't be ready for the next release.

As a temporary fix for 8.0.0, I propose just bumping up the `local_states_` capacity.

Closes #12845 from wjones127/ARROW-15718-multiple-datasets

Authored-by: Will Jones <willjones127@gmail.com>
Signed-off-by: Weston Pace <weston.pace@gmail.com>